fix(YSP-446): fix visited base contrast

--- a/components/02-molecules/callout/_yds-callout.scss
+++ b/components/02-molecules/callout/_yds-callout.scss
@@ -113,6 +113,7 @@ $global-callout-themes: map.deep-get(tokens.$tokens, 'global-themes');
     --color-text: var(--color-gray-800);
     --color-heading: var(--color-gray-800);
     --color-link-base: var(--color-slot-seven);
+    --color-link-visited-base: var(--color-gray-800);
   }
 
   &[data-component-theme='five'] {
